[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netpinger"
version = "0.1.0"
description = "A Python library for querying game servers"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Andrew Wade", email = "hi@wadedev.online" }
]
dependencies = [
    "asyncio>=3.4.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["networking", "game servers", "ping"]

[project.urls]
Homepage = "https://github.com/wadedesign/netpinger"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"